@@ -1,3 +1,6 @@
+2004-06-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+
 2004-06-19  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/desktop-snap.{cpp,h}: sp_desktop_dim_snap_list returns
@@ -6,6 +9,11 @@
 	* src/select-context.cpp: fix snap on move behaviour (again)
 
 2004-06-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/extension/internal/ps.cpp (begin): Add some basic error handling.
+
+	* src/extension/internal/ps.cpp (setup): Simplify an expression now that
+	  _bitmap is a bool.
 
 	* src/extension/internal/ps.h: Twiddle the order of the fields.
 	  Replace bitfields with bool/short.
